# trade_assist

./: .flake8  .gitignore  CONFIG.md  LICENSE  Makefile  QUICKSTART.md  README.md  config.backtest.example.json  config.recommend.example.json  config.tune.example.json  mypy.ini  pyproject.toml  setup.py
.github/workflows/: ci.yml
policies/: aggressive.json  baseline.json  custom.json  defensive.json
scripts/: release.py
tests/: conftest.py  test_backtest_additional.py  test_backtest_controls.py  test_cli_helpers.py  test_config_validation.py  test_data_cache.py  test_data_cache_additional.py  test_policy_config.py  test_policy_registry.py  test_portfolio_utils.py  test_recommendations.py  test_recommendations_additional.py  test_regime.py  test_tuning_engine.py
trade_assist/: __init__.py  cli.py  config_validation.py  main.py  workflow.py
trade_assist/policy/: __init__.py  adapter.py  backtest.py  config.py  constants.py  features.py  metrics.py  models.py  portfolio.py  recommendations.py  regime.py  registry.py  utils.py
trade_assist/policy/adapters/: __init__.py  v1.py
trade_assist/schemas/: __init__.py  backtest.schema.json  policy.schema.json  recommend.schema.json  tune.schema.json
trade_assist/ta/: __init__.py  constants.py  data.py  features.py  indicators.py  levels.py  models.py  plotting.py  runner.py  signals.py
trade_assist/tuning/: __init__.py  engine.py  models.py
